--- a/primeira-bateria/styles.css
+++ b/primeira-bateria/styles.css
@@ -22,3 +22,60 @@ body {
 }
 
 /* Escreva a partir daqui */
+
+.fundo {
+    background-color: #1D1D1D;
+}
+
+.container1 {
+    background-color: #13E3FF;
+    margin-left: 6%;
+    color: #1D1D1D;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    width: 30%;
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.sair {
+    display: flex;
+    color: #1D1D1D;
+    margin-top: 84%;
+}
+
+.centro {
+    display: flex;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    color: #FFFFFF;
+    align-items: center;
+    justify-content: center;
+    height: 50%;
+    width: 30%;
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.memorial {
+    color: #13E3FF;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: 300;
+}
+
+.button {
+    display: flex;
+    margin-top: 60%;
+    height: 40px;
+    width: 20%;
+    background-color: #13E3FF;
+    color: #1D1D1D;
+    border-radius: 8px;
+}
